--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
-	<link rel="stylesheet" href="style.css">
+	<link rel="stylesheet" href="./style/style.css">
 	<title>Gamer</title>
 </head>
 <body>
@@ -17,5 +17,5 @@
 		<button class="btn btn-success" onclick="resetar()">Resetar</button>
 	</div>
 </body>
-<script type="text/javascript" src="script.js"></script>
+<script type="text/javascript" src="./scripter/script.js"></script>
 </html>
